--- a/Hackathon/src/main/res/layout/activity_event.xml
+++ b/Hackathon/src/main/res/layout/activity_event.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hackathon.app.db.EventActivity">
+    tools:context="hackathon.app.event.EventActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:id="@+id/scrollView2" android:scrollbars="none" android:layout_weight="0.21">
-        <TextView android:text="This event is  a very cool thing. You will have an opportunity to fulfill all of your dreams here. Come along!" android:layout_width="wrap_content"
+        <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/eventDescription"
                   android:isScrollContainer="true"/>
