--- a/Hackathon/src/main/res/layout/activity_events.xml
+++ b/Hackathon/src/main/res/layout/activity_events.xml
@@ -5,12 +5,12 @@
               android:padding="5dp" >
 <ImageView
         android:id="@+id/logo"
-        android:layout_width="50px"
-        android:layout_height="50px"
+        android:layout_width="100px"
+        android:layout_height="100px"
         android:layout_marginLeft="5px"
         android:layout_marginRight="20px"
         android:layout_marginTop="5px"
-        android:src="@drawable/ball" >
+        android:src="@drawable/default_event" >
 </ImageView>
 
 <TextView
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@+id/label"
-        android:textSize="30px" >
+        android:textSize="60px" >
 </TextView>
 
 </LinearLayout>
